@startuml

title __JAVAPROJECTTEMPLATE's Class Diagram__\n

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.Board {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.Main {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.Player {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.Shoot {
    }
  }
  

  edu.bu.met.cs665.Shoot o-- edu.bu.met.cs665.Board : b
  edu.bu.met.cs665.Shoot o-- edu.bu.met.cs665.Player : p
  edu.bu.met.cs665.Shoot o-- edu.bu.met.cs665.Board : с


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
